--- a/cfDiSTATIS/GordonParcel/GordonParcel_DisTATIS.rmd
+++ b/cfDiSTATIS/GordonParcel/GordonParcel_DisTATIS.rmd
@@ -456,3 +456,6 @@ f03.netFpF.sess.cp3 <- netf.graph4sess.cp3$zeMap_background + netpf.sess.cp3$map
 gridExtra::grid.arrange(as.grob(f03.netFpF.sub.cp3), as.grob(f03.netFpF.sess.cp3), ncol=2)
 ```
 
+```{r save, echo = FALSE, include=FALSE}
+save.image(file = "cfDiSTATIS_GordonParcel.RData")
+```
