--- a/cfDiSTATIS/GordonParcel/simattack_GordonParcel_DisTATIS.Rmd
+++ b/cfDiSTATIS/GordonParcel/simattack_GordonParcel_DisTATIS.Rmd
@@ -458,3 +458,8 @@ f03.netFpF.sess.cp3 <- netf.graph4sess.cp3$zeMap_background + netpf.sess.cp3$map
 ```{r plot_fig_pF_cp3_net, echo=F, fig.height=8, fig.width= 16}
 gridExtra::grid.arrange(as.grob(f03.netFpF.sub.cp3), as.grob(f03.netFpF.sess.cp3), ncol=2)
 ```
+
+
+```{r save, echo = FALSE, include=FALSE}
+save.image(file = "cfDiSTATIS_simattack_GordonParcel.RData")
+```
